# avn-parachain

./: Cargo.toml  README.md
.github/workflows/: cargo-build.yml  cargo-check.yml  cargo-test.yml  ci-main.yml  gh-release.yml  trigger-avn-cloud-node.yml
client/external-service/: Cargo.toml
client/external-service/src/: eth_signing.rs  eth_utils.rs  ethereum_events_handler.rs  keystore_utils.rs  lib.rs  node_integration.rs  server.rs  timer.rs
client/external-service/src/chain/: mod.rs
client/external-service/src/evm/: client.rs
client/external-service/src/signing/: keystore_signer_provider.rs  mod.rs
node/: Cargo.toml
node/primitives/: Cargo.toml
node/src/: avn_config.rs  cli.rs  command.rs  rpc.rs  service.rs
node/src/chain_spec/: mod.rs
node/src/chain_spec/stable/: local.rs  mod.rs  staging.rs
node/src/chain_spec/test/: local.rs  mod.rs
node/src/key/: insert_avn_key.rs
node/src/rpc/: cross_chain_voting.rs
pallets/authors-manager/src/: migration.rs
pallets/avn-anchor/: Cargo.toml
pallets/avn-anchor/src/: benchmarking.rs  default_weights.rs  lib.rs  migration.rs  mock.rs  tests.rs
pallets/avn-offence-handler/src/: default_weights.rs
pallets/avn-proxy/: Cargo.toml
pallets/avn-proxy/src/: benchmarking.rs  lib.rs
pallets/avn-proxy/src/tests/: mock.rs
pallets/avn-transaction-payment/src/: default_weights.rs
pallets/avn/src/: default_weights.rs  lib.rs
pallets/cross-chain-voting/: Cargo.toml
pallets/cross-chain-voting/runtime-api/: Cargo.toml
pallets/cross-chain-voting/runtime-api/src/: lib.rs
pallets/cross-chain-voting/src/: default_weights.rs  lib.rs  tests.rs
pallets/eth-bridge/src/: benchmarking.rs  default_weights.rs  eth.rs  lib.rs
pallets/ethereum-events/src/: default_weights.rs  lib.rs  mock.rs
pallets/ethereum-events/src/tests/: tests.rs
pallets/nft-manager/src/: batch_nft.rs  default_weights.rs
pallets/node-manager/: Cargo.toml
pallets/node-manager/src/: benchmarking.rs  default_weights.rs  lib.rs  offchain.rs  reward.rs  stake.rs  types.rs
pallets/node-manager/src/tests/: mock.rs  test_admin.rs  test_auto_stake_preference.rs  test_heartbeat.rs  test_node_deregistration.rs  test_node_registration.rs  test_reward_payment.rs  test_stake_weight.rs
pallets/parachain-staking/src/tests/: mock.rs
pallets/summary-watchtower/: Cargo.toml
pallets/summary-watchtower/src/: lib.rs  root_utils.rs
pallets/summary-watchtower/src/tests/: mock.rs  tests.rs
pallets/summary/src/: benchmarking.rs  default_weights.rs
pallets/token-manager/: Cargo.toml
pallets/token-manager/src/: benchmarking.rs  default_weights.rs  lib.rs  mock.rs  test_avt_tokens.rs  test_non_avt_tokens.rs  test_proxying_signed_lower.rs  test_proxying_signed_transfer.rs  test_transfer.rs  utils.rs
pallets/validators-manager/src/: default_weights.rs  lib.rs  migration.rs
pallets/watchtower/: Cargo.toml
pallets/watchtower/src/: benchmarking.rs  default_weights.rs  lib.rs  proxy.rs  queue.rs  types.rs  vote.rs
pallets/watchtower/src/tests/: add_proposal.rs  admin.rs  mock.rs  voting.rs
primitives/avn-common/: Cargo.toml
primitives/avn-common/src/: constants.rs  event_types.rs  lib.rs  node.rs  transaction_filter.rs
primitives/avn-common/src/eth/: mod.rs
primitives/avn-common/src/tests/: helpers.rs
primitives/watchtower/src/: lib.rs
runtime/avn/: Cargo.toml
runtime/avn/src/: apis.rs  benchmarks.rs  lib.rs  proxy_config.rs
runtime/avn/src/configs/: mod.rs  xcm_config.rs
runtime/avn/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/avn/src/migrations/: mod.rs  register_avt_token.rs
runtime/avn/src/third_party_weights/: mod.rs  orml_currencies.rs  orml_tokens.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/common/src/weights/: block_weights.rs  extrinsic_weights.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/test/: Cargo.toml
runtime/test/src/: apis.rs  asset_registry.rs  benchmarks.rs  lib.rs
runtime/test/src/configs/: mod.rs  xcm_config.rs
