[workspace.package]
version = "9.0.2"
authors = ["Aventus systems team"]
homepage = "https://www.aventus.io/"
repository = "https://github.com/Aventus-Network-Services/avn-node-parachain/"
edition = "2021"
rust-version = "1.85.0"

[workspace]
resolver = "2"
members = [
    "node",
    "client/*",
    "pallets/*",
    "pallets/*/runtime-api",
    "primitives/*",
    "runtime/*",
]

[workspace.dependencies]
log = { version = "0.4.25", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
jsonrpsee = { version = "0.24.3", features = ["server"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
futures = "0.3.31"
anyhow = "1.0.81"
clap = { version = "4.5.13", features = ["derive"] }
smallvec = "1.11.0"
docify = "0.2.9"
parking_lot = { version = "0.12.3" }
test-case = "3.3.1"

alloy-primitives = { version = "1.1.2", default-features = false }
alloy-sol-types = { version = "1.1.2", default-features = false }

# Polkadot dependencies
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
substrate-wasm-builder = { version = "26.0.1", default-features = false }
# Substrate
frame = { version = "0.9.1", package = "polkadot-sdk-frame", default-features = false }
frame-benchmarking = { version = "40.2.1", default-features = false }
frame-benchmarking-cli = { version = "48.0.0", default-features = false }
frame-election-provider-support = { version = "40.1.1", default-features = false }
frame-executive = { version = "40.0.1", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.2.0", default-features = false }
frame-system-benchmarking = { version = "40.0.1", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.1", default-features = false, features = ["insecure_zero_ed"] }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-session = { version = "40.0.1", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
sp-api = { version = "36.0.1", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
sp-blockchain= { version = "39.0.0", default-features = false }
sp-io = { version = "40.0.1", default-features = false }
sp-keystore = { version = "0.42.0", default-features = false }
sp-timestamp = { version = "36.0.0", default-features = false }
sp-state-machine = { version = "0.45.0", default-features = false }
sp-application-crypto = { version = "40.1.0", default-features = false }
sp-staking = { version = "38.0.0", default-features = false }

pallet-assets = { version = "42.0.0", default-features = false }
sp-authority-discovery = { version = "36.0.0", default-features = false }
pallet-authority-discovery = { version = "40.0.0", default-features = false }
pallet-offences = { version = "39.0.0", default-features = false }
pallet-im-online = { version = "39.1.1", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
pallet-referenda = { version = "40.1.0", default-features = false }
pallet-conviction-voting = { version = "40.1.0", default-features = false }
pallet-whitelist = { version = "39.0.0", default-features = false }
pallet-scheduler = { version = "41.2.0", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0", default-features = false }
sc-basic-authorship = { version = "0.49.0", default-features = false }
sc-chain-spec = { version = "43.0.0", default-features = false }
sc-cli = { version = "0.52.0", default-features = false }
sc-client-api = { version = "39.0.0", default-features = false }
sc-consensus = { version = "0.49.0", default-features = false }
sc-executor = { version = "0.42.0", default-features = false }
sc-keystore = { version = "35.0.0", default-features = false }
sc-network = { version = "0.50.1", default-features = false }
sc-network-common = { version = "0.48.0", default-features = false }
sc-network-sync = { version = "0.49.0", default-features = false }
sc-offchain = { version = "45.0.0", default-features = false }
sc-rpc = { version = "45.0.0", default-features = false }
sc-service = { version = "0.51.0", default-features = false }
sc-sysinfo = { version = "42.0.0", default-features = false }
sc-telemetry = { version = "28.1.0", default-features = false }
sc-tracing = { version = "39.0.0", default-features = false }
sc-transaction-pool = { version = "39.0.0", default-features = false }
sc-transaction-pool-api = { version = "39.0.0", default-features = false }
sc-client-db = { version = "0.46.0", default-features = false }

substrate-frame-rpc-system = { version = "44.0.0", default-features = false }
substrate-prometheus-endpoint = { version = "0.17.3", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }

# Polkadot
pallet-xcm = { version = "19.2.2", default-features = false }
polkadot-cli = { version = "24.0.0", default-features = false }
polkadot-primitives = { version = "18.2.0", default-features = false }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.1", default-features = false }
polkadot-service = { version = "24.0.0", default-features = false }
xcm = { version = "16.2.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "20.1.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "19.1.3", package = "staging-xcm-executor", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.23.0", default-features = false }
cumulus-client-collator = { version = "0.23.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.23.0", default-features = false }
cumulus-client-consensus-common = { version = "0.23.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.19.0", default-features = false }
cumulus-client-network = { version = "0.23.0", default-features = false }
cumulus-client-service = { version = "0.24.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.18.1", default-features = false }
cumulus-relay-chain-interface = { version = "0.23.0", default-features = false }

cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-timestamp = { version = "0.19.0", default-features = false }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "11.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.2.0", default-features = false }
parachain-info = { version = "0.20.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "21.0.1", default-features = false }

polkadot-sdk = { version = "2503.2.0", default-features = false }

# ORML pallets
orml-benchmarking = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }
orml-currencies = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }
orml-asset-registry = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }
orml-tokens = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }
orml-traits = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }
orml-xtokens = { git = "https://github.com/AventusDAO/open-runtime-module-library", branch = "aventus-polkadot-stable2503", default-features = false }

# AvN pallets
sp-avn-common = { path = "./primitives/avn-common", default-features = false }
sp-watchtower = { path = "./primitives/watchtower", default-features = false }
pallet-avn-offence-handler = { path = "./pallets/avn-offence-handler", default-features = false }
pallet-validators-manager = { path = "./pallets/validators-manager", default-features = false }
pallet-ethereum-events = { path = "./pallets/ethereum-events", default-features = false }
pallet-avn = { path = "./pallets/avn", default-features = false }
pallet-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-summary = { path = "./pallets/summary", default-features = false }
pallet-token-manager = { path = "./pallets/token-manager", default-features = false }
pallet-nft-manager = { path = "./pallets/nft-manager", default-features = false }
pallet-avn-proxy = { path = "./pallets/avn-proxy", default-features = false }
pallet-avn-transaction-payment = { path = "./pallets/avn-transaction-payment", default-features = false }
pallet-eth-bridge = { path = "./pallets/eth-bridge", default-features = false }
pallet-eth-bridge-runtime-api = { path = "./pallets/eth-bridge/runtime-api", default-features = false }
pallet-parachain-staking = { path = "./pallets/parachain-staking", default-features = false }
pallet-avn-anchor = { path = "./pallets/avn-anchor", default-features = false }
pallet-cross-chain-voting = { path = "./pallets/cross-chain-voting", default-features = false }
pallet-cross-chain-voting-runtime-api = { path = "./pallets/cross-chain-voting/runtime-api", default-features = false }
pallet-node-manager = { path = "./pallets/node-manager", default-features = false }
pallet-watchtower = { path = "./pallets/watchtower", default-features = false }
pallet-summary-watchtower = { path = "./pallets/summary-watchtower", default-features = false }

# Common Runtime
runtime-common = { package = "avn-runtime-common", path = "./runtime/common", default-features = false }
avn-parachain-runtime = { path = "./runtime/avn/", default-features = false }
avn-test-runtime = { package = "avn-parachain-test-runtime", path = "./runtime/test/", default-features = false }

client-extrinsic-utils = { path = "./client/extrinsic-utils" }
external-service = { path = "./client/external-service" }

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
# Sacrifice compile speed for execution speed by using optimization flags:
# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

