[package]
name = "external-service"
license = "GPL-3.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { version = "=1.6.3", features = ["providers", "rpc-types", "transports", "signers"] }
alloy-primitives = { version = "=1.5.4" }
alloy-signer-local = { version = "=1.6.3" } 
async-trait = "0.1"
axum = "0.8"
codec = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
futures = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true, default-features = true }
tower-http = { version = "0.6", features = ["limit"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
url = "2"
secp256k1 = { version = "0.31.1", features = ["recovery"] }

# substrate deps
pallet-eth-bridge-runtime-api = { default-features = true, workspace = true }
sp-block-builder = { default-features = true, workspace = true }
sp-blockchain = { default-features = true, workspace = true }
sp-avn-common = { default-features = true, workspace = true }
sp-core = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
sp-api = { default-features = true, workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-client-api = { default-features = true, workspace = true }
sc-client-db = { default-features = true, workspace = true }
sc-transaction-pool-api = { default-features = true, workspace = true }
node-primitives = { default-features = true, workspace = true }
client-extrinsic-utils = { workspace = true }
