[package]
name = "pallet-cross-chain-voting"
description = "Links T2 accounts to T1 identity accounts for cross-chain voting power aggregation"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac","static-context"
], optional = true }
scale-info.workspace = true
log.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-avn-common.workspace = true
frame-support.workspace = true
frame-system.workspace = true


# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
hex = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true, features = ["insecure_zero_ed"] }
sp-state-machine = { default-features = true, workspace = true }
libsecp256k1 = { version = "0.7.0", default-features = false, features = ["hmac","static-context"] }

[features]
default = ["std"]
std = [
  "frame-benchmarking?/std",
  "codec/std",
  "scale-info/std",
  "log/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-avn-common/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "libsecp256k1",
]
try-runtime = ["frame-support/try-runtime"]
