[package]
name = "pallet-node-manager"
description = "Pallet to manage nodes of the chain"
publish = false

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = "GPL-3.0"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive", "serde"]}
sp-avn-common = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
pallet-avn = { workspace = true }
pallet-timestamp = { workspace = true }
# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex = { workspace = true }
[dev-dependencies]
pallet-balances = { workspace = true, features=["insecure_zero_ed", "default"] }
pallet-session = { workspace = true }
sp-state-machine = { workspace = true }
parking_lot = {  workspace = true }
test-case = { workspace = true }
sp-avn-common = { workspace = true, features=["test-utils"] }
sp-keystore = { workspace = true, features = ["default"]}

[features]
default = ["std"]
std = [
	"scale-info/std",
	"codec/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"log/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"pallet-avn/std",
	"sp-avn-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]