[package]
name = "avn-runtime-common"
description = "A Cumulus FRAME-based Substrate Node compatible with the AvN parachain"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
log.workspace = true
smallvec.workspace = true

# Polkadot SDK
codec = { workspace = true, features = ["derive"] }
scale-info.workspace = true
polkadot-sdk = { workspace = true, default-features = false, features =  ["runtime"]}

# AvN
sp-avn-common.workspace = true

[features]
default = [
	"std",
]
no_std = []
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"sp-avn-common/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
]

try-runtime = [
	"polkadot-sdk/try-runtime",
]