[package]
name = "avn-parachain-test-runtime"
description = "A Cumulus FRAME-based Substrate Node used for testing, compatible with the AvN parachain"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
docify.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
log.workspace = true

hex-literal = { optional = true, workspace = true, default-features = true }
serde_json = { workspace = true, default-features = false }
scale-info.workspace = true
smallvec.workspace = true
docify.workspace = true

cumulus-pallet-parachain-system.workspace = true
polkadot-sdk = { workspace = true, default-features = false, features = [
	"cumulus-pallet-aura-ext",
	"cumulus-pallet-session-benchmarking",
	"cumulus-pallet-weight-reclaim",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-storage-weight-reclaim",
	"cumulus-primitives-timestamp",
	"cumulus-primitives-utility",
	"frame-benchmarking",
	"frame-executive",
	"frame-metadata-hash-extension",
	"frame-support",
	"frame-system",
	"frame-system-benchmarking",
	"frame-system-rpc-runtime-api",
	"frame-try-runtime",
	"pallet-assets",
	"pallet-aura",
	"pallet-authority-discovery",
	"pallet-authorship",
	"pallet-collator-selection",
	"pallet-conviction-voting",
	"pallet-im-online",
	"pallet-message-queue",
	"pallet-offences",
	"pallet-preimage",
	"pallet-referenda",
	"pallet-scheduler",
	"pallet-session",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-utility",
	"pallet-whitelist",
	"pallet-xcm",
	"parachains-common",
	"polkadot-parachain-primitives",
	"polkadot-runtime-common",
	"runtime",
	"staging-parachain-info",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",
]}

# Balances added explicitly to ensure the features we need are enabled
pallet-balances.workspace = true

# AvN pallets
sp-avn-common.workspace = true
sp-watchtower.workspace = true
pallet-avn-offence-handler.workspace = true
pallet-validators-manager.workspace = true
pallet-ethereum-events.workspace = true
pallet-avn.workspace = true
pallet-summary.workspace = true
pallet-token-manager.workspace = true
pallet-nft-manager.workspace = true
pallet-avn-proxy.workspace = true
pallet-avn-transaction-payment.workspace = true
pallet-eth-bridge.workspace = true
pallet-eth-bridge-runtime-api.workspace = true
pallet-parachain-staking.workspace = true
pallet-avn-anchor.workspace = true
pallet-cross-chain-voting.workspace = true
pallet-cross-chain-voting-runtime-api.workspace = true

# Common Runtime
runtime-common.workspace = true

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde_json/std",
	# Polkadot SDK
	"substrate-wasm-builder",
	"polkadot-sdk/std",
	"pallet-balances/std",
	"cumulus-pallet-parachain-system/std",
	# AvN pallets
	"sp-avn-common/std",
	"sp-watchtower/std",
	"pallet-avn/std",
	"pallet-avn-anchor/std",
	"pallet-avn-proxy/std",
	"pallet-avn-offence-handler/std",
	"pallet-cross-chain-voting/std",
	"pallet-cross-chain-voting-runtime-api/std",
	"pallet-eth-bridge/std",
	"pallet-eth-bridge-runtime-api/std",
	"pallet-ethereum-events/std",
	"pallet-nft-manager/std",
	"pallet-summary/std",
	"pallet-token-manager/std",
	"pallet-validators-manager/std",
	"pallet-avn-transaction-payment/std",
	"pallet-parachain-staking/std",
	# Avn Common Runtime
	"runtime-common/std",
]

runtime-benchmarks = [
	# Polkadot SDK
	"polkadot-sdk/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	# AvN pallets
	"pallet-avn-anchor/runtime-benchmarks",
	"pallet-avn-proxy/runtime-benchmarks",
	"pallet-avn-offence-handler/runtime-benchmarks",
	"pallet-cross-chain-voting/runtime-benchmarks",
	"pallet-eth-bridge/runtime-benchmarks",
	"pallet-ethereum-events/runtime-benchmarks",
	"pallet-avn/runtime-benchmarks",
	"pallet-nft-manager/runtime-benchmarks",
	"pallet-summary/runtime-benchmarks",
	"pallet-token-manager/runtime-benchmarks",
	"pallet-validators-manager/runtime-benchmarks",
	"pallet-avn-transaction-payment/runtime-benchmarks",
	"pallet-parachain-staking/runtime-benchmarks",
	# Avn Common Runtime
	"runtime-common/runtime-benchmarks",
]

try-runtime = [
	# Polkadot SDK
	"polkadot-sdk/try-runtime",
	"pallet-balances/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"runtime-common/try-runtime",
	"pallet-avn-anchor/try-runtime",
	"pallet-avn-offence-handler/try-runtime",
	"pallet-validators-manager/try-runtime",
	"pallet-ethereum-events/try-runtime",
	"pallet-avn/try-runtime",
	"pallet-summary/try-runtime",
	"pallet-token-manager/try-runtime",
	"pallet-nft-manager/try-runtime",
	"pallet-avn-proxy/try-runtime",
	"pallet-avn-transaction-payment/try-runtime",
	"pallet-parachain-staking/try-runtime",
	"pallet-eth-bridge/try-runtime",
	"pallet-cross-chain-voting/try-runtime",
]
